Removed CreatedResponse Return new IDs as text
